--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -12,5 +12,5 @@
   justify-items: center;
   width: 100vw;
   height: 100vh;
-  overflow: hidden;
+
 }
